--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/TuffLuffJimmy/Template_Engine#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "chalk": "^4.0.0",
+    "inquirer": "^7.1.0",
     "jest": "^26.0.1"
   }
 }
